--- a/A1.ipynb
+++ b/A1.ipynb
@@ -146,9 +146,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3700739913.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [44]\u001b[1;36m\u001b[0m\n\u001b[1;33m    return num ** (1/p) *\u001b[0m\n\u001b[1;37m                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "def distance2pts(vector1, vector2, p=2):\n",
+    "    #Euclidian p = 2\n",
+    "    #Manhatten p = 1\n",
+    "    num = 0\n",
+    "    for i in range(0,len(vector1)):\n",
+    "        num += abs(vector1[i]-vector2[i]) ** p\n",
+    "    return num ** (1/p)\n",
+    "\n",
+    "\n",
+    "#distance2pts([0,2,3,4],[2,4,3,7],1)\n",
+    "\n",
+    "a = np.array((1.1, 2.2, 3.3))\n",
+    "b = np.array((4.4, 5.5, 6.6))\n",
+    "\n",
+    "#distance2pts(a,b,1.5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[146 158 164]\n"
+     ]
+    }
+   ],
    "source": [
     "#K-Means implementation\n",
     "import numpy as np\n",
@@ -156,48 +197,580 @@
     "#implement a seed?\n",
     "\n",
     "# start positions\n",
-    "'''\n",
-    "xmin = feature1.min() # or assume normalised data? 0-1\n",
-    "xmax = feature1.max()\n",
-    "ymin = feature2.min()\n",
-    "ymax = feature2.max()\n",
-    "'''\n",
-    "\n",
     "\n",
     "\n",
     "# def distEuclidian()\n",
     "\n",
     "#loop\n",
     "#compute closest\n",
-    "def kMeans(k, feature1, feature2, rounds=10):\n",
-    "    # Pick K points\n",
-    "    #start points\n",
-    "    cluster_starts = np.random.uniform(0,1, (k, 2))\n",
+    "\n",
+    "pointcloudsdummy = np.arange(1500).reshape((500,3))\n",
+    "\n",
+    "#pointcloudsdummy = np.array([[2,5,4],[48,89,6],[4,3,8],[4,2,8],[7,5,6]])\n",
+    "\n",
+    "def kMeans(data, k, feature1, feature2):\n",
+    "    #cluster = np.zeros(shape=[500,2]) #used for?\n",
+    "\n",
+    "    dataConsidered = data[:,[feature1,feature2]]\n",
+    "    #print(dataConsidered)\n",
+    "\n",
+    "    pick_centroids = np.random.randint(0,500,k)\n",
+    "    # centroids = np.random.choice(data, size= k)\n",
+    "    print(pick_centroids)\n",
+    "    centroids = []\n",
+    "    for c in pick_centroids:\n",
+    "        centroids.append(dataConsidered[c])\n",
+    "\n",
+    "    running = 1\n",
+    "    while running == 1:\n",
+    "        #for each point:\n",
+    "        for i, location in enumerate(dataConsidered):\n",
+    "            distance = float('inf') # our distance from each point to centroid\n",
+    "            #now check for each centroid\n",
+    "            for i2, centroid in enumerate(centroids):\n",
+    "                \n",
+    "                break\n",
+    "                \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        running = 0\n",
     "\n",
     "    clustergroup = []\n",
     "    #loop this\n",
-    "    for point in range(0,len(feature1)):\n",
-    "        #compute nearest cluster\n",
-    "        for cluster_point in cluster_starts:\n",
-    "            #clustergroup[] = cluster_point --no, wrong\n",
+    "    # for point in range(0,len(feature1)):\n",
+    "    #     #compute nearest cluster\n",
+    "    #     for cluster_point in cluster_starts:\n",
+    "    #         #clustergroup[] = cluster_point --no, wrong\n",
     "\n",
+    "    \n",
+    "#dictionary where each is has number of cluster, 000: 1, 001:3, 002: 3, etc\n",
     "\n",
-    "    #dictionary where each is has number of cluster, 000: 1, 001:3, 002: 3, etc\n",
-    "\n",
+    "kMeans(pointcloudsdummy,3, 0, 2)\n",
     "\n",
     "#compute centroids\n",
     "\n",
     "#move K;s to centroids\n",
-    "\n",
-    "#repeat\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cluster = np.zeros(shape=[500,2])\n",
+    "print(cluster)"
+   ]
   }
  ],
  "metadata": {
