seb commiting maybe with error

--- a/A1.ipynb
+++ b/A1.ipynb
@@ -17,9 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start program for importing files\n",
+      "new directory changed to : c:\\Users\\sebas\\Documents\\GitHub\\GEO5017Assignment1\\pointclouds\n"
+     ]
+    }
+   ],
    "source": [
     "#Import Point Cloud\n",
     "import pandas as pd\n",
@@ -146,20 +155,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3700739913.py, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [44]\u001b[1;36m\u001b[0m\n\u001b[1;33m    return num ** (1/p) *\u001b[0m\n\u001b[1;37m                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
+    "import numpy as np\n",
     "def distance2pts(vector1, vector2, p=2):\n",
     "    #Euclidian p = 2\n",
     "    #Manhatten p = 1\n",
@@ -179,14 +180,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[146 158 164]\n"
+      "Dataset length is:  25\n",
+      "[24 11 10]\n",
+      "this is k:  3\n",
+      "start centroid set:  [[104. 103.]\n",
+      " [ 52. 173.]\n",
+      " [ 19. 146.]]\n",
+      "24\n",
+      "11\n",
+      "10\n",
+      "these are the centroids  [[274. 150.]\n",
+      " [ 71. 304.]\n",
+      " [168. 214.]]\n",
+      "start while loop\n",
+      "level 1 loop\n",
+      "level 2 loop\n"
      ]
     }
    ],
@@ -204,50 +219,77 @@
     "#loop\n",
     "#compute closest\n",
     "\n",
-    "pointcloudsdummy = np.arange(1500).reshape((500,3))\n",
+    "pointcloudsdummy = np.random.randint(0,400,75).reshape((25,3))\n",
     "\n",
     "#pointcloudsdummy = np.array([[2,5,4],[48,89,6],[4,3,8],[4,2,8],[7,5,6]])\n",
     "\n",
     "def kMeans(data, k, feature1, feature2):\n",
     "    #cluster = np.zeros(shape=[500,2]) #used for?\n",
+    "    dataset_length = len(data)\n",
+    "    print(\"Dataset length is: \", dataset_length)\n",
     "\n",
     "    dataConsidered = data[:,[feature1,feature2]]\n",
     "    #print(dataConsidered)\n",
     "\n",
-    "    pick_centroids = np.random.randint(0,500,k)\n",
-    "    # centroids = np.random.choice(data, size= k)\n",
+    "    pick_centroids = np.random.randint(0,dataset_length,k)\n",
     "    print(pick_centroids)\n",
-    "    centroids = []\n",
-    "    for c in pick_centroids:\n",
-    "        centroids.append(dataConsidered[c])\n",
+    "    \n",
+    "    #print(\"datacon\", dataConsidered)\n",
     "\n",
+    "    print(\"this is k: \", k)\n",
+    "\n",
+    "    centroids = np.empty([k,2])\n",
+    "    print(\"start centroid set: \", centroids)\n",
+    "\n",
+    "    for i, c in enumerate(pick_centroids):\n",
+    "        print(c)\n",
+    "        #centroids = np.append(centroids, [dataConsidered[c]])\n",
+    "        centroids[i] = dataConsidered[c]\n",
+    "\n",
+    "    print(\"these are the centroids \", centroids)\n",
+    "\n",
+    "\n",
+    "    clustergroup = np.zeros(dataset_length)\n",
+    "    clustergroup_new = np.zeros(dataset_length)\n",
+    "    \n",
     "    running = 1\n",
     "    while running == 1:\n",
+    "        print(\"start while loop\")\n",
     "        #for each point:\n",
     "        for i, location in enumerate(dataConsidered):\n",
+    "            print(\"level 1 loop\")\n",
     "            distance = float('inf') # our distance from each point to centroid\n",
     "            #now check for each centroid\n",
     "            for i2, centroid in enumerate(centroids):\n",
-    "                \n",
-    "                break\n",
-    "                \n",
+    "                print(\"level 2 loop\")\n",
+    "                temp_dist = distance2pts(location, centroid)\n",
+    "                if temp_dist < distance:\n",
+    "                    distance = temp_dist\n",
+    "                    clustergroup_new[i] = centroid\n",
+    "            print(\"cluster group subtraction, old from new: \", clustergroup - clustergroup_new)\n",
+    "\n",
+    "            if clustergroup - clustergroup_new != 0:\n",
+    "                clustergroup = clustergroup_new\n",
+    "            else:\n",
+    "                running = 0\n",
     "\n",
     "\n",
+    "        #update centroids data\n",
+    "        #take all items in dictionary with that centroids, then calculate new center, then update centroid data\n",
+    "        for i, centroid in enumerate(centroids):\n",
+    "            temp_list = []\n",
+    "            for i2, item in clustergroup:\n",
+    "                if item == centroid:\n",
+    "                    temp_list.append(dataConsidered[i2])\n",
+    "\n",
+    "            centroid[i] = temp_list.mean()\n",
     "\n",
     "\n",
-    "        running = 0\n",
-    "\n",
-    "    clustergroup = []\n",
-    "    #loop this\n",
-    "    # for point in range(0,len(feature1)):\n",
-    "    #     #compute nearest cluster\n",
-    "    #     for cluster_point in cluster_starts:\n",
-    "    #         #clustergroup[] = cluster_point --no, wrong\n",
-    "\n",
-    "    \n",
     "#dictionary where each is has number of cluster, 000: 1, 001:3, 002: 3, etc\n",
     "\n",
-    "kMeans(pointcloudsdummy,3, 0, 2)\n",
+    "kMeans(pointcloudsdummy,3, 0, 1)\n",
+    "\n",
+    "# print(pointcloudsdummy)\n",
     "\n",
     "#compute centroids\n",
     "\n",
